--- a/visualization.ipynb
+++ b/visualization.ipynb
@@ -24,8 +24,8 @@
      "text": [
       "Memory usage: 433.2MB\n",
       "\n",
-      "CPU times: total: 12.7 s\n",
-      "Wall time: 12.7 s\n"
+      "CPU times: total: 12.8 s\n",
+      "Wall time: 12.8 s\n"
      ]
     },
     {
@@ -405,8 +405,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: total: 46.7 s\n",
-      "Wall time: 46.9 s\n"
+      "CPU times: total: 46.4 s\n",
+      "Wall time: 46.5 s\n"
      ]
     },
     {
@@ -775,7 +775,8 @@
      "data": {
       "text/plain": [
        "???               1302540\n",
-       "TWO PAIRS         1221792\n",
+       "PAIR              1098240\n",
+       "TWO PAIRS          123552\n",
        "THREE               54912\n",
        "STRAIGHT            10200\n",
        "FLUSH                5108\n",
@@ -798,32 +799,62 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "a9efc881",
+   "id": "3cd2a64b",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['STRAIGHT FLUSH',\n",
-       " 'FLUSH',\n",
-       " 'TWO PAIRS',\n",
-       " 'STRAIGHT',\n",
-       " '???',\n",
-       " 'THREE',\n",
-       " 'FULL HOUSE',\n",
-       " 'FOUR',\n",
-       " 'ROYAL FLUSH']"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['???', 'PAIR', 'TWO PAIRS', 'THREE', 'STRAIGHT', 'FLUSH', 'FULL HOUSE', 'FOUR', 'STRAIGHT FLUSH', 'ROYAL FLUSH']\n",
+      "['ROYAL FLUSH', 'STRAIGHT FLUSH', 'FOUR', 'FULL HOUSE', 'FLUSH', 'STRAIGHT', 'THREE', 'TWO PAIRS', 'PAIR', '???']\n"
+     ]
     }
    ],
    "source": [
-    "rankings = list(df['ranking'].unique())\n",
-    "rankings"
+    "rankings = df['ranking'].value_counts().index.to_list()\n",
+    "print(rankings)\n",
+    "rankings.reverse()\n",
+    "print(rankings)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "0c5dbc1c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(♠K, ♣4, ♥6, ♥9, ♦9) PAIR\n",
+      "\n",
+      "(♠10, ♠K, ♥4, ♥8, ♦4) PAIR\n",
+      "\n",
+      "(♣7, ♣9, ♣K, ♦3, ♦J) ???\n",
+      "\n",
+      "(♠K, ♣4, ♣6, ♦2, ♦6) PAIR\n",
+      "\n",
+      "(♣2, ♣K, ♥2, ♥10, ♥J) PAIR\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for _ in range(5):\n",
+    "    hand = choice(all_hands)\n",
+    "    print(hand, df.at[hand, 'ranking'])\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9cd2c247",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
