small refactoring readme.md

--- a/visualization.ipynb
+++ b/visualization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 5,
    "id": "8d8ee25b",
    "metadata": {},
    "outputs": [],
@@ -12,6 +12,146 @@
     "from random import choice\n",
     "import warnings \n",
     "warnings.filterwarnings('ignore')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "b0a46c3d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: total: 2.59 s\n",
+      "Wall time: 2.61 s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>ranking</th>\n",
+       "      <th>extra_info</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>(♠A, ♠10, ♠J, ♠Q, ♠K)</td>\n",
+       "      <td>ROYAL FLUSH</td>\n",
+       "      <td>ROYAL FLUSH</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>(♦A, ♦10, ♦J, ♦Q, ♦K)</td>\n",
+       "      <td>ROYAL FLUSH</td>\n",
+       "      <td>ROYAL FLUSH</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>(♥A, ♥10, ♥J, ♥Q, ♥K)</td>\n",
+       "      <td>ROYAL FLUSH</td>\n",
+       "      <td>ROYAL FLUSH</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>(♣A, ♣10, ♣J, ♣Q, ♣K)</td>\n",
+       "      <td>ROYAL FLUSH</td>\n",
+       "      <td>ROYAL FLUSH</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>(♠9, ♠10, ♠J, ♠Q, ♠K)</td>\n",
+       "      <td>STRAIGHT FLUSH</td>\n",
+       "      <td>K</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2598955</th>\n",
+       "      <td>(♠6, ♣2, ♣4, ♣7, ♥5)</td>\n",
+       "      <td>HIGH HAND</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2598956</th>\n",
+       "      <td>(♠6, ♣2, ♣4, ♣7, ♥3)</td>\n",
+       "      <td>HIGH HAND</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2598957</th>\n",
+       "      <td>(♠6, ♣2, ♣4, ♣5, ♣7)</td>\n",
+       "      <td>HIGH HAND</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2598958</th>\n",
+       "      <td>(♠6, ♣2, ♣4, ♣5, ♦7)</td>\n",
+       "      <td>HIGH HAND</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2598959</th>\n",
+       "      <td>(♠6, ♣2, ♣4, ♣5, ♥7)</td>\n",
+       "      <td>HIGH HAND</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2598960 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    Unnamed: 0         ranking   extra_info\n",
+       "0        (♠A, ♠10, ♠J, ♠Q, ♠K)     ROYAL FLUSH  ROYAL FLUSH\n",
+       "1        (♦A, ♦10, ♦J, ♦Q, ♦K)     ROYAL FLUSH  ROYAL FLUSH\n",
+       "2        (♥A, ♥10, ♥J, ♥Q, ♥K)     ROYAL FLUSH  ROYAL FLUSH\n",
+       "3        (♣A, ♣10, ♣J, ♣Q, ♣K)     ROYAL FLUSH  ROYAL FLUSH\n",
+       "4        (♠9, ♠10, ♠J, ♠Q, ♠K)  STRAIGHT FLUSH            K\n",
+       "...                        ...             ...          ...\n",
+       "2598955   (♠6, ♣2, ♣4, ♣7, ♥5)       HIGH HAND            7\n",
+       "2598956   (♠6, ♣2, ♣4, ♣7, ♥3)       HIGH HAND            7\n",
+       "2598957   (♠6, ♣2, ♣4, ♣5, ♣7)       HIGH HAND            7\n",
+       "2598958   (♠6, ♣2, ♣4, ♣5, ♦7)       HIGH HAND            7\n",
+       "2598959   (♠6, ♣2, ♣4, ♣5, ♥7)       HIGH HAND            7\n",
+       "\n",
+       "[2598960 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "df = pd.read_csv(\"sorted_poker_hands_shortest.csv\")\n",
+    "df"
    ]
   },
   {
